[metadata]

name = configserver
version = 1.12
author = dylan14567
author_email = dylanmeca70@yahoo.com
description = Configure your linux server and check for vulnerabilities with configserver
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dylan14567/configserver
project_urls =
    Bug Tracker = https://github.com/dylan14567/configserver/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
